syntax = "proto3";

package MyMQ;

enum ExchangeType {
    UNKOWNTYPE = 0;
    DIRECT = 1;
    FANOUT = 2;
    TOPIC = 3;
};

enum DeliveryMode {
    UNKOWNMODE = 0;
    UNDURABLE = 1;
    DURABLE = 2;
};

message BasicProperties {
    string id = 1;
    DeliveryMode delivery_mode = 2;
    string routing_key = 3;
};

message Message {
    message Payload {
        BasicProperties properties = 1;
        string body = 2;
        string valid = 3;   // 有效标志位 bool?
    };

    Payload payload = 1;
    uint32 offset = 2;      //偏移量
    uint32 length = 3;
};
